# ai_challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
artifacts/images/postgres/: Dockerfile
artifacts/migrations/: 0001.inital-schema.sql  0002.inital-data_load.sql  20250218_01_69aJE.sql
artifacts/migrations/data/: customer.csv  customer_interactions.csv
src/: app.py  config.py  factory.py
src/controllers/: ai_controller.py  statistics_controller.py
src/repository/: base.py  interactions_repository.py
src/repository/statistics/: postgres.py
src/services/: ai_service.py  base_llm_service.py  llm_factory.py  openai_llm_service.py
src/utils/: logger.py
src/utils/db/: postgres.py
tests/controller/: test_ai_controller.py
tests/intergration/: conftest.py  test_app.py
tests/intergration/repository/statistics/: test_postgres.py
tests/intergration/utils/db/: test_postgres.py
